# MLOps-RecSys

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  airflow.Dockerfile  benchmark_simple.py  docker-compose-airflow.yml  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-airflow.txt  requirements-api.txt  run_api.py  simple_benchmark_results.json  sitemap.xml
.github/workflows/: ci.yml  lint.yml
ci-cd/: index.html
dags/: dvc_init_dag.py  recsys_dvc_helpers.py  recsys_training_pipeline.py
data/: .gitignore  cat_features.csv.dvc  eval.csv.dvc  event.csv.dvc  fclickstream.csv.dvc  train.csv.dvc
docker/: index.html
docs/: ci-cd.md  docker.md  index.md  setup.md  workflow.md
mloprec/: __init__.py  __main__.py  cli.py  tracking.py
mloprec/scripts/: als_eval.py  als_eval_without_feat.py  data_prep.py  evaluate.py  lightfm_eval_without_feat.py  model_comparison.py  train_als.py  train_als_without_feat.py  train_lightfm.py
models/: .gitignore  als_evaluation_results.txt  als_model.pkl.dvc  als_without_feat_evaluation_results.txt  evaluation_results.txt  lightfm_model.pkl.dvc  lightfm_without_feat_evaluation_results.txt  model_comparison.csv  model_comparison_report.md
monitoring/grafana/provisioning/dashboards/: mlops-recsys-dashboard.json
monitoring/prometheus/: prometheus.yml
search/: search_index.json
service/: __init__.py
service/api/: __init__.py  app.py  config.py  metrics.py  schemas.py  services.py  views.py
setup/: index.html
tests/: __init__.py  test_basic.py
workflow/: index.html
