[tool.poetry]
name = "mloprec"
version = "0.1.0"
description = "MLOps project for recommender systems"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mloprec"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
torch = {version = "^2.0.0", source = "pytorch"}
mkdocs-material = "^9.6.12"
dvc = "^3.59.1"
rectools = {extras = ["lightfm"], version = "^0.13.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
pandas-stubs = "^2.2.3.250308"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "W", "C4", "UP", "N", "ANN", "D"]
ignore = ["ANN101", "D203", "D212"]

[tool.ruff.isort]
known-first-party = ["mloprec"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["implicit.*", "rectools.*", "lightfm.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
mloprec = "mloprec.cli:main"
